Completed profile header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,3 +37,7 @@ img {
 .form-control::placeholder {
   color: #bbb !important;
 }
+
+/*.App { // Darkmode theme
+  background-color: rgba(0, 0, 0, 0.7);
+}*/
