--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,3 @@
-* {
-  height: 100%vh;
-}
-
 img {
   width: 100%;
 }
@@ -11,7 +7,7 @@ img {
   background: url("./img/showcase.jpg") no-repeat;
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  min-height: 100vh;
   margin-top: -24px;
   margin-bottom: -50px;
 }
